--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "exports": "./index.js",
   "type": "module",
   "dependencies": {
-    "better-sqlite3": "^8.5.1",
+    "better-sqlite3": "^9.2.2",
     "difflib": "^0.2.4",
     "discord.js": "^14.13.0",
+    "dotenv": "^16.4.5",
     "fast-levenshtein": "^3.0.0",
     "ms": "^2.1.3",
     "skia-canvas-draw-text": "^1.0.3"
